--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,25 +2,20 @@ version: '3.8'
 
 services:
   win_test:
+    container_name: win_test
+    user: app
     build:
       context: .
-      dockerfile: Dockerfile
-    container_name: win_test
+      args:
+        USER_ID: ${USER_ID}
     volumes:
-      - .:/var/www/html
+      - .:/app:rw
     ports:
-      - '9000:9000'
-    networks:
-      - app-network
-
-  nginx:
-    image: nginx:1.27
-    container_name: nginx
-    ports:
-      - '80:80'
-    volumes:
-      - .:/var/www/html
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - "8337:8337"
+    environment:
+      - APP_ENV=dev
+    depends_on:
+      - db
     networks:
       - app-network
 
@@ -32,7 +27,7 @@ services:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: wallet_db
       MYSQL_USER: user
-      MYSQL_PASSWORD: password
+      MYSQL_PASSWORD: user1234
     ports:
       - '4306:3306'
     volumes:
