--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,6 +6,8 @@
 parameters:
 
 services:
+    App\Normalizer\CurrencyEnumDenormalizer:
+        tags: [ serializer.normalizer ]
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
